tests/parser/errors/numeric_adjacent_ident.mochi
let n = 1e
